// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label component test > Label with ansi formatting 1`] = `
<div>
  <label
    class="msg resultText"
    data-tooltip="expand"
  >
    <span
      data-tooltip="inherit"
    >
      Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.
    </span>
  </label>
</div>
`;

exports[`Label component test > Test Label output 1`] = `
<div>
  <label
    class="msg label"
    data-tooltip="expand"
  >
    A Label
  </label>
</div>
`;
